[gd_scene load_steps=26 format=2]

[ext_resource path="res://things/comicsans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://levels menu.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://level.gd" type="Script" id=4]
[ext_resource path="res://pause menu.gd" type="Script" id=5]
[ext_resource path="res://Background.gd" type="Script" id=6]
[ext_resource path="res://settings menu.gd" type="Script" id=7]
[ext_resource path="res://sounds/bgm.ogg" type="AudioStream" id=8]
[ext_resource path="res://BGM.gd" type="Script" id=9]
[ext_resource path="res://SoundVelosiped.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 90, 30 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60, 30 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 70, 30 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 60, 35 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 80, 40 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 80, 30 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 140, 30 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 60, 35 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 30, 35 )

[node name="main" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2.0
margin_top = -2.0
margin_right = 1282.0
margin_bottom = 722.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="main menu" type="Node2D" parent="."]

[node name="text_gamename" type="Label" parent="main menu"]
margin_right = 1280.0
custom_fonts/font = SubResource( 1 )
text = "Bubbles"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_play" type="Label" parent="main menu"]
margin_top = 150.0
margin_right = 1280.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 2 )
text = "Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_settings" type="Label" parent="main menu"]
margin_top = 250.0
margin_right = 1280.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_quit" type="Label" parent="main menu"]
margin_top = 350.0
margin_right = 1280.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_play_main_menu" type="TouchScreenButton" parent="main menu"]
position = Vector2( 577.28, 156.203 )
shape = SubResource( 3 )

[node name="button_settings_main_menu" type="TouchScreenButton" parent="main menu"]
position = Vector2( 551.624, 255.499 )
shape = SubResource( 4 )

[node name="button_quit_main_menu" type="TouchScreenButton" parent="main menu"]
position = Vector2( 579.38, 356.251 )
shape = SubResource( 5 )

[node name="play menu" type="Node2D" parent="."]

[node name="text_levels" type="Label" parent="play menu"]
margin_top = 150.0
margin_right = 1280.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
text = "Levels"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_market" type="Label" parent="play menu"]
margin_top = 250.0
margin_right = 1280.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
text = "Market"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_back" type="Label" parent="play menu"]
margin_left = -1.25995
margin_top = 350.0
margin_right = 1278.74
margin_bottom = 407.0
custom_fonts/font = SubResource( 6 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_market_play_menu" type="TouchScreenButton" parent="play menu"]
position = Vector2( 569.135, 255.344 )
shape = SubResource( 7 )

[node name="button_levels_play_menu" type="TouchScreenButton" parent="play menu"]
position = Vector2( 580.618, 153.244 )
shape = SubResource( 3 )

[node name="button_back_play_menu" type="TouchScreenButton" parent="play menu"]
position = Vector2( 578.07, 352.981 )
shape = SubResource( 3 )

[node name="levels menu" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="text_back" type="Label" parent="levels menu"]
margin_left = 14.5167
margin_top = 649.362
margin_right = 116.517
margin_bottom = 706.362
custom_fonts/font = SubResource( 8 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_back_levels_menu" type="TouchScreenButton" parent="levels menu"]
position = Vector2( 14.5167, 646.362 )
shape = SubResource( 9 )

[node name="level" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="text_score" type="Label" parent="level"]
margin_top = 650.0
margin_right = 83.0
margin_bottom = 727.0
custom_fonts/font = SubResource( 10 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_combo" type="Label" parent="level"]
margin_left = 400.0
margin_top = 650.0
margin_right = 484.414
margin_bottom = 707.0
custom_fonts/font = SubResource( 10 )
text = "Combo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_taps" type="Label" parent="level"]
margin_left = 800.0
margin_top = 650.0
margin_right = 884.414
margin_bottom = 707.0
custom_fonts/font = SubResource( 10 )
text = "Taps:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_menu" type="Label" parent="level"]
margin_left = 1100.0
margin_top = 650.0
margin_right = 1184.41
margin_bottom = 707.0
custom_fonts/font = SubResource( 10 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_menu" type="TouchScreenButton" parent="level"]
position = Vector2( 1080, 640 )
shape = SubResource( 11 )

[node name="pause menu" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="text_paused" type="Label" parent="pause menu"]
margin_right = 1280.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_continue" type="Label" parent="pause menu"]
margin_top = 150.0
margin_right = 1280.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 6 )
text = "Continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_market2" type="Label" parent="pause menu"]
margin_top = 250.0
margin_right = 1280.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 6 )
text = "Market"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_to_main_menu" type="Label" parent="pause menu"]
margin_left = -1.25995
margin_top = 350.0
margin_right = 1278.74
margin_bottom = 407.0
custom_fonts/font = SubResource( 6 )
text = "To Main Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_market2" type="TouchScreenButton" parent="pause menu"]
position = Vector2( 569.135, 255.344 )
shape = SubResource( 7 )

[node name="button_continue" type="TouchScreenButton" parent="pause menu"]
position = Vector2( 560, 153.244 )
shape = SubResource( 12 )

[node name="button_to_main_menu" type="TouchScreenButton" parent="pause menu"]
position = Vector2( 500, 352.981 )
shape = SubResource( 13 )

[node name="settings menu" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="text_back2" type="Label" parent="settings menu"]
margin_left = 14.5167
margin_top = 649.362
margin_right = 116.517
margin_bottom = 706.362
custom_fonts/font = SubResource( 8 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_settings" type="Label" parent="settings menu"]
margin_right = 1280.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_label_music_volume" type="Label" parent="settings menu"]
margin_left = 50.0
margin_top = 150.0
margin_right = 350.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 6 )
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_music_volume" type="Label" parent="settings menu"]
margin_left = 1100.0
margin_top = 150.0
margin_right = 1181.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 6 )
text = "50%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_music_volume_left" type="Label" parent="settings menu"]
margin_left = 1050.0
margin_top = 150.0
margin_right = 1065.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 6 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_music_volume_right" type="Label" parent="settings menu"]
margin_left = 1200.0
margin_top = 150.0
margin_right = 1215.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 6 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_market" type="Label" parent="settings menu"]
margin_left = 50.0
margin_top = 260.0
margin_right = 350.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 6 )
text = "Pop Sounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_back_to_main_menu" type="TouchScreenButton" parent="settings menu"]
position = Vector2( 14.5167, 646.362 )
shape = SubResource( 14 )

[node name="button_music_decrease" type="TouchScreenButton" parent="settings menu"]
position = Vector2( 1025.71, 148.244 )
shape = SubResource( 15 )

[node name="button_music_increase" type="TouchScreenButton" parent="settings menu"]
position = Vector2( 1182.4, 147.772 )
shape = SubResource( 15 )

[node name="text_pop_flag" type="Label" parent="settings menu"]
margin_left = 1100.0
margin_top = 260.0
margin_right = 1162.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 6 )
text = "yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_pop_left" type="Label" parent="settings menu"]
margin_left = 1050.33
margin_top = 260.0
margin_right = 1065.33
margin_bottom = 320.0
custom_fonts/font = SubResource( 6 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_pop_right" type="Label" parent="settings menu"]
margin_left = 1200.33
margin_top = 260.0
margin_right = 1215.33
margin_bottom = 320.0
custom_fonts/font = SubResource( 6 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_pop_left" type="TouchScreenButton" parent="settings menu"]
position = Vector2( 1027.31, 258.436 )
shape = SubResource( 15 )

[node name="button_pop_right" type="TouchScreenButton" parent="settings menu"]
position = Vector2( 1182.73, 259.225 )
shape = SubResource( 15 )

[node name="SoundVelosiped" parent="." instance=ExtResource( 10 )]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
mix_target = 1
script = ExtResource( 9 )
[connection signal="pressed" from="main menu/button_play_main_menu" to="." method="_on_button_play_main_menu_pressed"]
[connection signal="pressed" from="main menu/button_settings_main_menu" to="." method="_on_button_settings_main_menu_pressed"]
[connection signal="pressed" from="main menu/button_quit_main_menu" to="." method="_on_button_quit_main_menu_pressed"]
[connection signal="pressed" from="play menu/button_market_play_menu" to="." method="_on_button_market_play_menu_pressed"]
[connection signal="pressed" from="play menu/button_levels_play_menu" to="." method="_on_button_levels_play_menu_pressed"]
[connection signal="pressed" from="play menu/button_back_play_menu" to="." method="_on_button_back_play_menu_pressed"]
[connection signal="pressed" from="levels menu/button_back_levels_menu" to="." method="_on_button_back_levels_menu_pressed"]
[connection signal="pressed" from="level/button_menu" to="level" method="_on_button_menu_pressed"]
[connection signal="pressed" from="pause menu/button_market2" to="pause menu" method="_on_button_market2_pressed"]
[connection signal="pressed" from="pause menu/button_continue" to="pause menu" method="_on_button_continue_pressed"]
[connection signal="pressed" from="pause menu/button_to_main_menu" to="pause menu" method="_on_button_to_main_menu_pressed"]
[connection signal="pressed" from="settings menu/button_back_to_main_menu" to="." method="_on_button_back_to_main_menu_pressed"]
[connection signal="pressed" from="settings menu/button_music_decrease" to="settings menu" method="_on_button_music_decrease_pressed"]
[connection signal="pressed" from="settings menu/button_music_increase" to="settings menu" method="_on_button_music_increase_pressed"]
[connection signal="pressed" from="settings menu/button_pop_left" to="settings menu" method="_on_button_pop_left_pressed"]
[connection signal="pressed" from="settings menu/button_pop_right" to="settings menu" method="_on_button_pop_right_pressed"]
